gerer les chemin relatifs

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,25 +1,50 @@
 server {
     listen 80;
     server_name localhost;
-    root /var/www/html/public;  # Point d'entrée de ton app (ex: Laravel/Symfony)
+    root /var/www/html/public;
+    index index.php index.html index.htm;
 
+    # Configuration pour les logs
+    error_log /var/log/nginx/project_error.log;
+    access_log /var/log/nginx/project_access.log;
+
+    # Configuration principale
     location / {
-        try_files $uri /index.php$is_args$args;
+        try_files $uri $uri/ /index.php$is_args$args;
     }
 
+    # Gestion des fichiers PHP
     location ~ ^/index\.php(/|$) {
-        fastcgi_pass 127.0.0.1:9000;  # Utilisation d'une IP locale
+        fastcgi_pass 127.0.0.1:9000;  # Communication avec PHP-FPM
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         fastcgi_param DOCUMENT_ROOT $realpath_root;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+        fastcgi_param HTTP_X_FORWARDED_PROTO $scheme;
+        fastcgi_param HTTP_X_FORWARDED_FOR $proxy_add_x_forwarded_for;
+        fastcgi_param HTTP_X_FORWARDED_HOST $host;
         internal;
     }
 
+    # Bloquer l'accès direct aux autres fichiers PHP
     location ~ \.php$ {
         return 404;
     }
 
-    error_log /var/log/nginx/project_error.log;
-    access_log /var/log/nginx/project_access.log;
+    # Optimisations pour les fichiers statiques
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        try_files $uri =404;
+    }
+
+    # Bloquer l'accès aux fichiers sensibles
+    location ~ /\. {
+        deny all;
+    }
+
+    location ~ /(vendor|app|routes|migrations|seeders)/.*$ {
+        deny all;
+    }
 }
