dernier version marche en ligne

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,16 +1,35 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name _;  # Accepter tous les noms de domaine
     root /var/www/html/public;
     index index.php index.html index.htm;
 
     # Configuration pour les logs
-    error_log /var/log/nginx/project_error.log;
+    error_log /var/log/nginx/project_error.log warn;
     access_log /var/log/nginx/project_access.log;
 
-    # Configuration principale
+    # Headers pour Render
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+
+    # Configuration principale - route tout vers index.php
     location / {
         try_files $uri $uri/ /index.php$is_args$args;
+    }
+
+    # Health check endpoint pour Render
+    location /health {
+        access_log off;
+        return 200 "healthy\n";
+        add_header Content-Type text/plain;
+    }
+
+    # Route de debug pour vérifier le fonctionnement
+    location /debug {
+        access_log off;
+        return 200 "App is running\n";
+        add_header Content-Type text/plain;
     }
 
     # Gestion des fichiers PHP
@@ -18,12 +37,23 @@ server {
         fastcgi_pass 127.0.0.1:9000;  # Communication avec PHP-FPM
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
+        
+        # Paramètres FastCGI
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         fastcgi_param DOCUMENT_ROOT $realpath_root;
         fastcgi_param PATH_INFO $fastcgi_path_info;
+        
+        # Headers pour les proxies (Render)
         fastcgi_param HTTP_X_FORWARDED_PROTO $scheme;
         fastcgi_param HTTP_X_FORWARDED_FOR $proxy_add_x_forwarded_for;
         fastcgi_param HTTP_X_FORWARDED_HOST $host;
+        fastcgi_param HTTP_X_REAL_IP $remote_addr;
+        
+        # Timeouts
+        fastcgi_read_timeout 300;
+        fastcgi_connect_timeout 300;
+        fastcgi_send_timeout 300;
+        
         internal;
     }
 
@@ -33,7 +63,7 @@ server {
     }
 
     # Optimisations pour les fichiers statiques
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
         try_files $uri =404;
@@ -44,7 +74,11 @@ server {
         deny all;
     }
 
-    location ~ /(vendor|app|routes|migrations|seeders)/.*$ {
+    location ~ /(vendor|app|routes|migrations|seeders|docker)/.*$ {
         deny all;
     }
+
+    # Gestion des erreurs
+    error_page 404 /index.php;
+    error_page 500 502 503 504 /index.php;
 }
