--- a/docker/nginx/supervisord.conf
+++ b/docker/nginx/supervisord.conf
@@ -1,12 +1,18 @@
 [supervisord]
 nodaemon=true
+user=root
+logfile=/var/log/supervisor/supervisord.log
+pidfile=/var/run/supervisord.pid
 
 [program:php-fpm]
-command=php-fpm
+command=php-fpm --nodaemonize --fpm-config /usr/local/etc/php-fpm.conf
+user=root
 autostart=true
 autorestart=true
 stderr_logfile=/var/log/php-fpm.err.log
 stdout_logfile=/var/log/php-fpm.out.log
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
 
 [program:nginx]
 command=nginx -g 'daemon off;'
@@ -15,3 +21,5 @@ autostart=true
 autorestart=true
 stderr_logfile=/var/log/nginx.err.log
 stdout_logfile=/var/log/nginx.out.log
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
